fixing shortcut menu on mobile

--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/styles/breakpoints/_small.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/styles/breakpoints/_small.scss
@@ -294,7 +294,7 @@ HEADER
                 .menu-item {
                     min-width: auto;
                     width: auto;
-                    font-size: 2.0vw;
+                    font-size: 3.0vw;
                     flex-basis: auto;
                     flex-grow: 1;
                     white-space: nowrap;         
